<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuiZany</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="hint8">Enter Username</string>
    <string name="hint9">Enter Password</string>
    <string name="title_activity_main_manu">MainManu</string>
    <string name="btn_q">Quiz</string>
    <string name="btn_a">Attendance</string>
    <string name="btn_o">Others</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_map">Map</string>
    <string name="hello_world">Thanks for choosing QuiZany!\nMore functions may coming up!\n  Team Narya
        \nYu Wu\nChi Zhang\nJialiang Lin\n\n\n\n\nPlease rate our app if you like it: </string>
    <string name="title_activity_mchoice">Multiple Choice</string>
    <string name="title_activity_quantity">Quantities</string>
    <string name="title_activity_taking_notes_select_menu">TakingNotesSelectMenuActivity</string>
    <string name="title_activity_take_attendance_action">TakeAttendanceActionActivity</string>
    <string name="attendanceHint">Take Attendance</string>
    <string name="title_activity_attendace">Attendance</string>
    <string name="title_activity_others">Others</string>
    <string name="title_activity_take_notes">Take Notes</string>
    <string name="title_activity_record">Record</string>
    <string name="title_activity_audio">Audio</string>
    <string name="title_activity_text">Text</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="menu_insert">Add New Notes</string>
    <string name="title_activity_text_edit">TextEditActivity</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="menu_insert">Add New Note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="title_activity_edite_text">EditeTextActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_storage">Open</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="submitBtn">Submit</string>
    <string name="loc">Locationing..</string>
    <string name="srtBtn">Start Recording</string>
    <string name="stpBtn">Stop Recording</string>
    <string name="playBtn">Play Recording</string>
    <string name="stpPlayBtn">Stop Playing</string>
    <string name="open">Open Folder</string>
    <string name="sendBtn">Send</string>
    <string name="name">Name</string>
    <string name="hint1">Enter your Name Here</string>
    <string name="mobile">Mobile Number</string>
    <string name="hint2">Enter your Mobile Number Here</string>
    <string name="email">Your Email Address</string>
    <string name="hint3">Enter your Email Address Here</string>
    <string name="comment">Your Questions</string>
    <string name="hint4">Enter your Questions Here</string>
    <string name="title_contact">Email Professor if You Have Any Questions</string>
    <string name="p_email">Professor Email</string>
    <string name="hint5">Enter Professor Email Address</string>
    <string name="suBtn">Sign Up</string>
    <string name="ch_a">A</string>
    <string name="ch_b">B</string>
    <string name="ch_c">C</string>
    <string name="ch_d">D</string>
    <string name="notes">Take Notes</string>
    <string name="contact">Contact Prof.</string>
    <string name="cs">Coming Soon</string>
    <string name="mc">Multi-Choice</string>
    <string name="qt">Quantity</string>
    <string name="note1">Text</string>
    <string name="note2">Picture</string>
    <string name="note3">Audio</string>
    <string name="note4">Video</string>
    <string name="hint6">Enter title Here</string>
    <string name="hint7">Enter Notes Here</string>
    <string name="empty">Empty Notes</string>
    <string name="id">Andrew ID</string>
    <string name="cpw">Confirm Password</string>
    <string name="setip">Set Professor IP</string>
    <string name="ok">OK</string>
    <string name="title_activity_comming">CommingActivity</string>

</resources>
