<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#005dab"
	>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:textColor="#ffffff"
			android:text="@string/title" />
		<EditText 
		    android:id="@+id/title" 
		 	android:layout_width="0dip"
			android:layout_height="wrap_content" 
			android:hint="@string/hint6"
			android:background="#ffffff"
			android:layout_weight="1"/>
	</LinearLayout>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:textColor="#ffffff"
		android:text="@string/body" />
	<EditText 
	    android:id="@+id/body" 
	    android:layout_width="match_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:hint="@string/hint7"
		android:scrollbars="vertical"
		android:background="#ffffff"
		 />
	
	<Button 
	    android:id="@+id/confirm" 
	  	android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="#008adc"
		android:textColor="#ffffff"
		 />

</LinearLayout>