<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#005dab"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#005dab" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:text="@string/title_contact"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/p_email"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/pemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/hint5"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="69dp"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/editTextNaam"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="19dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/hint1"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/editTextMail"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="27dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/hint3"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/editTextMobiel"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/hint2"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/comment"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/editTextBericht"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/hint4"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/sendBtn"
                android:textColor="#ffffff" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>