<?xml version="1.0" encoding="utf-8"?>
<!-- This file is /res/layout/main.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#005dab"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.72"
        android:gravity="center" >

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="800dp"
            android:layout_height="800dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/bgnBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:background="#008adc"
        android:textColor="#ffffff"
        android:text="@string/srtBtn" />

    <Button
        android:id="@+id/stpBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#008adc"
        android:textColor="#ffffff"
        android:text="@string/stpBtn" />

    <Button
        android:id="@+id/playRecordingBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#008adc"
        android:textColor="#ffffff"
        android:text="@string/playBtn" />

    <Button
        android:id="@+id/stpPlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#008adc"
        android:textColor="#ffffff"
        android:text="@string/stpPlayBtn" />

    <Button
        android:id="@+id/openfolder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#008adc"
        android:textColor="#ffffff"
        android:text="@string/open" />

</LinearLayout>