<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/bg1" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginTop="311dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="66dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:hint="@string/hint9"
        android:background="#ffffff"
        android:inputType="textPassword" >

        
    </EditText>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignTop="@+id/textView1"
        android:ems="10"
        android:hint="@string/hint8"
        android:background="#ffffff"
        android:inputType="textPersonName" ><requestFocus /></EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" 
        
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editText2"
        android:layout_marginRight="39dp"
        android:layout_marginTop="62dp"
        android:layout_toLeftOf="@+id/editText1"
        android:background="#005dab"
        android:text="@string/cancel"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="#005dab"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/login"
        android:layout_alignBottom="@+id/login"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/login"
        android:background="#005dab"
        android:text="@string/suBtn"
        android:textColor="#ffffff" />

</RelativeLayout>
