<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#005dab">

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp"
        android:background="#008adc"
        android:text="@string/submitBtn"
        android:textColor="#ffffff" />

    

    <EditText
        android:id="@+id/editTextUserAndrewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="81dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/id" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignLeft="@+id/editTextUserAndrewID"
        android:layout_marginBottom="85dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextConfirmPassword"
        android:layout_alignLeft="@+id/editTextUserName"
        android:layout_marginBottom="66dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonCreateAccount"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_marginBottom="127dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/cpw"
        android:inputType="textPassword" />
    
</RelativeLayout>