<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TakingNotesSelectMenuActivity" 
    android:background="#005dab"
    >

    <Button
        android:id="@+id/button_takingNotes_text"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="#008adc"
        android:text="@string/note1"
        android:onClick="goToText"
        android:textColor="#ffffff"
        android:textSize="100sp" />

    <Button
        android:id="@+id/button_takingNotes_picture"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_takingNotes_text"
        android:layout_below="@+id/button_takingNotes_text"
        android:layout_marginTop="75dp"
        android:background="#008adc"
        android:text="@string/note2"
        android:textColor="#ffffff"
        android:textSize="100sp" 
        android:onClick="goToCamera"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:background="#008adc"
        android:textColor="#ffffff"
        android:textSize="100sp"
        android:onClick="goToRecord"
        android:text="@string/note4" />

    <Button
        android:id="@+id/button_takingNotes_audio"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_takingNotes_picture"
        android:layout_below="@+id/button_takingNotes_picture"
        android:layout_marginTop="54dp"
        android:background="#008adc"
        android:text="@string/note3"
        android:onClick="goToAudio"
        android:textColor="#ffffff"
        android:textSize="100sp" />

</RelativeLayout>