<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    
    android:background="#005dab"
    >

    <Button
        android:id="@+id/button1"
        android:layout_width="600sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_coming"
        android:layout_centerVertical="true"
        android:background="#008adc"
        android:text="@string/contact"
        android:onClick="goToContact"
        android:textColor="#ffffff"
        android:textSize="90sp" />

    <Button
        android:id="@+id/button_takingNotes"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp"
        android:background="#008adc"
        android:onClick="goToTakingNotesSelectMenu"
        android:text="@string/notes"
        android:textColor="#ffffff"
        android:textSize="90sp" />

    <Button
        android:id="@+id/button_coming"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_takingNotes"
        android:layout_below="@+id/button1"
        android:layout_marginTop="102dp"
        android:background="#008adc"
        android:text="@string/cs"
        android:textColor="#ffffff"
        android:onClick="goToComming"
        android:textSize="90sp" />

</RelativeLayout>